[package]
name = "lazurite"
version = "0.1.0"
edition = "2024"
authors = ["amy universe <414d59@gmail.com>"]
repository = "https://codeberg.org/tomara-x/lazurite"
license = "MIT OR Apache-2.0"

[dependencies]
fundsp = {git = "https://github.com/tomara-x/fundsp", features = ["crossbeam"]}
cpal = {version = "0.16.0", features = ["jack"]}
syn = {version = "2.0.109", default-features = false, features = ["parsing", "clone-impls", "full"]}
crossbeam-channel = "0.5.15"
plotters = {version = "0.3.7", optional = true}

[features]
plot = ["dep:plotters"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
panic = 'abort'
strip = true
codegen-units = 1
lto = "thin"
